--- a/views/sms.hbs
+++ b/views/sms.hbs
@@ -9,7 +9,7 @@
                 
                 <div class="row">
                     <div class="input-field col s6">
-                        <select name="standard">
+                        <select name="sms-standard">
                         <option value="ALL" selected>ALL</option>
                         {{#each standards}}
                         <option value="{{this._id}}">{{code}}</option>
@@ -18,16 +18,22 @@
                         <label>Standard</label>
                     </div>
                     <div class="input-field col s6">
-                        <select id="section" name="section">
+                        <select id="sms-section" name="sms-section" disabled>
                         <option value="" disabled selected>Choose your option</option>
                         </select>
                         <label>Section</label>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <textarea name="text" class="materialize-textarea"></textarea>
+                            <label for="text">Message</label>
+                        </div>
                     </div>
                     <div class="input-field col s12">
                         <div class="section">
                             <center>
                             <div class="container">
-                                <button type="submit" class="btn large">Register</button>
+                                <button type="submit" class="btn large">Send</button>
                             </div>
                             </center>
                         </div>
