--- a/views/register.hbs
+++ b/views/register.hbs
@@ -14,6 +14,12 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
+                    <input name="dob" type="date" class="datepicker">
+                    <label for="dob">Date of Birth</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
                     <input name="phone" type="text" class="validate">
                     <label for="phone">Phone</label>
                     </div>
